[note] update megatron

--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -40,6 +40,9 @@ defaults:
   # self config override anything above
   - _self_
 
+# Whether to enable thinking
+enable_thinking: True
+
 # config for actor, rollout and reference model
 actor_rollout_ref:
 
